feat(ALL): DuoDuo7